--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "swiper": "^11.2.4",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "universal-cookie": "^7.2.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
