--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-slick": "^0.30.2",
     "react-top-loading-bar": "^3.0.2",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.15",
     "swiper": "^11.2.4",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
