--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jspdf": "^3.0.0",
     "lucide-react": "^0.454.0",
     "nuqs": "^2.3.2",
+    "pusher-js": "^8.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
