--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/howler": "^2.2.12",
     "@types/module-alias": "^2.0.4",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
