--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@reduxjs/toolkit": "^2.5.1",
+    "@sentry/react": "^9.5.0",
+    "@sentry/tracing": "^7.120.3",
+    "@sentry/vite-plugin": "^3.2.2",
     "@stripe/react-stripe-js": "^3.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
