--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.27.0",
     "react-top-loading-bar": "^3.0.2",
+    "react-window": "^1.8.11",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.15",
     "swiper": "^11.2.4",
