--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-slick": "^0.30.2",
     "react-top-loading-bar": "^3.0.2",
     "slick-carousel": "^1.8.1",
+    "sonner": "^2.0.5",
     "styled-components": "^6.1.15",
     "swiper": "^11.2.4",
     "tailwind-merge": "^2.5.4",
