--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -13,10 +13,10 @@ jobs:
         uses:  actions/checkout@v3
 
       - name: Install Dependancies
-        run:  npm install
+        run:  pnpm install
 
       - name: Build App
-        run:  npm run build
+        run:  pnpm run build
 
       - name: Deploy via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
