Add pnpm installation step to GitHub Actions workflow for dependency management

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -12,6 +12,9 @@ jobs:
       - name: Checkout Code Akevas
         uses:  actions/checkout@v3
 
+      - name: Install pnpm
+        run: npm install -g pnpm
+
       - name: Install Dependancies
         run:  pnpm install
 
