--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -28,4 +28,4 @@ jobs:
           username: akevasftp@akevas.com
           password: jMylEA6+(oHD
           local-dir: ./build/
-          server-dir: /public_html/main
+          server-dir: /public_html/main/
