--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -28,4 +28,4 @@ jobs:
           username: akevasftp@akevas.com
           password: jMylEA6+(oHD
           local-dir: ./dist/
-          server-dir: /public_html/main/
+          server-dir: /home/c2490001c/public_html/main
