Add sonner library for toast notifications and replace alerts with toast messages in delivery registration pages

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-top-loading-bar": "^3.0.2",
     "recharts": "^2.15.4",
     "slick-carousel": "^1.8.1",
+    "sonner": "^2.0.6",
     "styled-components": "^6.1.15",
     "swiper": "^11.2.4",
     "tailwind-merge": "^2.5.4",
