--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -36,4 +36,4 @@ jobs:
           username: akevasftp@akevas.com
           password: jMylEA6+(oHD
           local-dir: ./dist/
-          server-dir: /main/
+          server-dir: /public_html/
