--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://main.akevas.com",
+  "homepage": "https://akevas.com",
   "scripts": {
     "dev": "vite",
     "preinstall": "npx only-allow pnpm",
