Update deployment workflow step name for clarity

--- a/.github/workflows/deploy-seller.yml
+++ b/.github/workflows/deploy-seller.yml
@@ -9,7 +9,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code Akevas
+      - name: Checkout Code Seller Akevas
         uses:  actions/checkout@v3
 
       - name: Install pnpm
