Update deploy-delivery workflow to specify .htaccess addition to Delivery dist/ directory

--- a/.github/workflows/deploy-delivery.yml
+++ b/.github/workflows/deploy-delivery.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Build App
         run:  pnpm run build
 
-      - name: Add .htaccess to dist/
+      - name: Add .htaccess to Delivery dist/
         run: |
           echo 'Options -Indexes' > ./dist/.htaccess
           echo 'RewriteEngine On' >> ./dist/.htaccess
