ci: Exclude `api`, `seller`, and `delivery` directories from deployment, update the service worker, and modify login and seller detail components.

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Deploy via SSH (Rsync)
         uses: Burnett01/rsync-deployments@5.2.1
         with:
-          switches: -avzr --delete
+          switches: -avzr --delete --exclude='api' --exclude='seller' --exclude='delivery'
           path: ./dist/
           remote_path: domains/akevas.com/public_html/
           remote_host: ${{ secrets.HOST }}
