--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           # L'option --delete va supprimer les vieux fichiers JS sur le serveur (Génial !)
           # Mais rsync ne touchera pas aux dossiers 'api', 'seller' (parent) et 'delivery'
-          switches: -avzr --delete --exclude='api' --exclude='seller' --exclude='delivery'
+          switches: -avzr --delete --exclude='api' --exclude='seller' --exclude='delivery' -e "ssh -p ${{ secrets.PORT }} -o StrictHostKeyChecking=no"
           path: ./dist/
           remote_path: domains/akevas.com/public_html/
           remote_host: ${{ secrets.HOST }}
